Update and rename Amor.html to amor.html

--- a/amor.html
+++ b/amor.html
@@ -52,7 +52,7 @@
   <a href="index.html" class="botao-voltar">Voltar ao Site</a>
 
   <audio id="musica-angel" loop>
-    <source src="/audio/loveu.mp3" type="audio/mpeg">
+    <source src="loveu.mp3" type="audio/mp3">
   </audio>
 
   <script>
