--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="carta">
     <p><strong>Para: Karina (ou melhor, meu chocolate branco)</strong></p>
     <p>Hoje é seu aniversário. Ou seja: o dia oficial em que o mundo ficou mais bonito, as estrelas mais ofuscadas pela sua beleza, e eu… completamente apaixonada.</p>
-    <p>Queria te dar um presente presencialmente e à altura. Pensei em uma casa (caro), uma viagem pra Paris (sem passaporte), ou um jantar com a lana del rey (ela não respondeu). Então resolvi dar algo mais valioso e que eu sei fazer: <strong>um site todo seu HAHAHA</strong>, feito com carinho e entusiasmo (tô muito feliz de estar escrevendo esse codigo)</p>
+    <p>Queria te dar um presente presencialmente e à altura. Pensei em uma casa (caro), uma viagem pra Paris (sem passaporte), ou um jantar com a lana del rey (ela não respondeu). Então resolvi dar algo simples e que eu sei fazer: <strong>um site todo seu HAHAHA</strong>, feito com carinho e entusiasmo (tô muito feliz de estar escrevendo esse codigo)</p>
     <p>Ah, tem 2 presentes ali embaixo. Abre com cuidado. Tem coisa séria ali</p>
     <p>Feliz aniversário, meu amor. Que venham mais beijos, mais histórias… e que a gente nunca pare de rir e se amar.</p>
     <p>Com amor<br><strong>Milie-Miliele</strong></p>
